<resources>
    <string name="app_name">G&amp;GO Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">G&amp;GO</string>
    <string name="nav_header_subtitle">Administrador</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="pedidos">Pedidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_date_desc">Fecha reciente</string>
    <string name="action_date_asc">Fecha antigua</string>
    <string name="action_pendientes">Pendientes</string>
    <string name="action_complete">Completados</string>
    <string name="action_canceled">Cancelados</string>
    <string name="action_onroad">En camino</string>
    <string name="action_search_product">Buscar pedido</string>
    <string name="action_cerrarsesion">Salir</string>
    <string name="channel_name">Main G&amp;GO Notification Channel</string>
    <string name="channel_description">This is the notification main channel</string>

</resources>